# repopact

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONFORMANCE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SPEC.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
audits/: README.md  registry.json
benchmarks/: README.md
conformance/: README.md  manifest.json
decisions/: 0001-repository-as-pact.md  0002-license-apache-2.0.md  0003-validate-records-against-json-schemas.md  0004-specification-and-documentation-approach.md  0005-alpha-versioning-and-release.md  0006-spec-is-a-maintainer-command.md  0007-declare-1-0-0-on-adopter-evidence.md  0008-brownfield-adoption-maps-existing-signals.md  0009-pypi-distribution-via-trusted-publishing.md  0010-plan-import-maps-existing-trackers-to-work.md  0011-repopact-doctor-diagnoses-drift.md  0012-tracking-import-and-takeover.md  0013-takeover-delete-is-documented-and-git-guarded.md  0014-readme-checkbox-parity.md  0015-import-plan-rewrites-narrative-links.md  0016-takeover-repoints-inbound-references.md  0017-add-deferred-and-rejected-decision-statuses.md  0018-generalized-opt-in-preflight-marker.md  0019-repopact-role-in-forgewire-labs-portfolio.md  0020-launch-positioning-layer-above-agents-md.md  0021-preflight-mandatory-and-provenance.md  0022-release-2.0.2-installed-seed-lookup.md  0023-add-proposed-lifecycle-state.md  0024-release-2.1.0-proposed-lifecycle.md  0025-release-2.2.0-dashboard-integrity.md  0026-optional-release-label.md  0027-release-2.3.0-optional-release-label.md  (+1 more)
(+277 files in other folders)
